Expanded the code to allow PSTb to be distributed.